# bitboard

./: .gitignore  Cargo.toml  README.md  bench  cli  cmp  profile.sh  rustfmt.toml
src/: internal.rs  lib.rs  types.rs
src/board/: arrayboard.rs  attack_vector.rs  bitboard.rs  bitboard_stresstest.rs  bitboard_test.rs  board.rs  color.rs  formatter.rs  internal.rs  mailbox.rs  mailbox_test.rs  mod.rs  mod_move.rs  moves.rs  parser.rs  piece.rs  pos.rs  pos4.rs  square.rs
src/engines/: alphabeta.rs  e1_valid.rs  e2_greedy.rs  e3_negamax.rs  e4_alphabeta.rs  e5_par_alphabeta.rs  engine.rs  greedy.rs  greedy_with.rs  greedy_with_position.rs  internal.rs  lookahead0.rs  lookahead1.rs  lookahead2.rs  lookahead_n.rs  mod.rs  parse_engine.rs  pick_move.rs  random.rs  search.rs  value_functions.rs
src/search/: alphabeta.rs  internal.rs  mod.rs  negamax.rs  piece_value.rs  search.rs
src/util/: mod.rs
