[package]
name = "bitboard_chess"
version = "1.0.0"
edition = "2021"

[lib]
name = "bitboard"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "cmp"
path = "bin/cmp.rs"

[[bin]]
name = "bench"
path = "bin/bench.rs"


[dependencies]
anyhow = "1.0"
smallvec = "1.6"
fnv = "1.0"
rand = "0.8"
structopt = "0.3"
rayon = "1.5"

[profile.release]
debug = 1
lto = "fat"
